Images no longer stretch on upload

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,9 @@
 .searchField {
   left: -2em;
 }
+
+/* prevents Avatar component images from stretching */
+.avatar {
+  object-fit: cover;
+  border: 0;
+}
